# Canvas-Open-Source

./: .gitmodules  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle  build.gradle.kts  proguard-rules.pro  roman-key-store.jks
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  fileselector.cpp  main.cpp  main.h  scroll.cpp
app/src/main/cpp/Core/Canvas/: Canvas.cpp  Canvas.h  Canvas.hpp
app/src/main/cpp/Core/Cipher/: Cipher.cpp  Cipher.h  CipherBase.cpp  CipherBase.h  CipherBase.hpp  CipherHook.cpp  CipherHook.h  CipherHook.hpp  CipherIncludes.h  CipherPatch.cpp  CipherPatch.h  CipherPatch.hpp  CipherUtils.cpp  CipherUtils.h
app/src/main/cpp/Core/FileSelector/: fileselector.cpp
app/src/main/cpp/Core/Iconloader/: IconLoader.cpp  IconLoader.h
app/src/main/cpp/Core/fileselector/: fileselector.cpp
app/src/main/cpp/Core/imgui/: androidbk.cpp  github.txt
app/src/main/cpp/Utils/KittyMemory/: github.txt
app/src/main/cpp/Utils/KittyMemory/KittyMemory/: MemoryPatch.cpp
app/src/main/cpp/Utils/artpatch/: artpatch.c
app/src/main/cpp/Utils/imgui_androidbk/: androidbk.cpp
app/src/main/cpp/include/And64InlineHook/: And64InlineHook.cpp  And64InlineHook.hpp
app/src/main/cpp/include/KittyMemory/: KittyArm64.cpp  KittyInclude.h  KittyMemory.cpp  KittyMemory.h  KittyScanner.cpp  KittyScanner.h  KittyUtils.cpp  KittyUtils.h  MemoryPatch.cpp  MemoryPatch.h
app/src/main/cpp/include/artpatch/: artpatch.c  artpatch.h  procutils.c  procutils.h
app/src/main/cpp/include/canvas/: Canvas.cpp  Canvas.h
app/src/main/cpp/include/cipher/: Cipher.cpp  Cipher.h  CipherArm64.cpp
app/src/main/cpp/include/iconloader/: IconLoader.cpp  IconLoader.h
app/src/main/cpp/include/imgui/: androidbk.cpp  androidbk.h  imgui.cpp  imgui.h
app/src/main/cpp/include/misc/: Utils.h  Vector2.h  obfuscate.h  visibility.h
app/src/main/cpp/include/monostring/: MonoString.cpp
app/src/main/cpp/utilities/: CrashDump.cpp
app/src/main/java/com/tgc/sky/: AudioFrameResultRef.java  BuildConfig.java  ExoPlayerService.java  ExoPlayerVideoMetadata.java  ExoplayerService.java  ExoplayerVideoMetadata.java  GameActivity.java  QrScanner.java  SystemAccounts_android.java  SystemAnalytics_android.java  SystemCommerce_android.java  SystemIO_android.java  SystemRemoteConfig_android.java  SystemSupport_android.java  SystemUI_android.java  TGCNativeActivity.java  TextFieldState.java  VideoDirRef.java  VideoFrameResultRef.java  VideoListener.java
app/src/main/java/git/artdeell/skymodloader/: DeviceInfo.java  (+11 more)
app/src/main/java/org/fmod/: AudioDevice.java  FMOD.java  MediaCodec.java
app/src/main/res/color/: color_text_transient.xml
app/src/main/res/drawable/: back_button.xml  buttons.xml  buttons_2.xml  custom_progress_bg.xml  home.xml  home_fill.xml  ic_nav_home.xml  ic_nav_mods.xml  ic_nav_settings.xml  ic_telegram.xml  icon_black_round.xml  icon_fg.xml  logo_bg.xml  separator.xml  settings.xml  stat_notify_sync.xml
app/src/main/res/font/: lato.xml
app/src/main/res/layout/: activity_main.xml  dialog_x.xml  fragment_home.xml  fragment_mod_manager.xml  include_home_canvas.xml  item_dev.xml  mod_list_element.xml  mod_manager.xml  setting_layout.xml  tgc_logo.xml  updater.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/mipmap-anydpi-v26/: icon_round.xml
app/src/main/res/navigation/: main.xml
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  icon_bg.xml  strings.xml  styles.xml  values.xml
app/src/main/res/values-night/: colors.xml  styles.xml
app/src/main/res/values-zh-rCN/: arrays.xml  strings.xml
app/src/main/res/xml/: paths.xml  recordpaths.xml  root_preferences.xml
gradle/wrapper/: gradle-wrapper.properties
(+111 files in other folders)
